--- a/app/src/main/res/layout/activity_algoritmos_de_ordenamiento.xml
+++ b/app/src/main/res/layout/activity_algoritmos_de_ordenamiento.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.sortingalgorithms.AlgoritmosDeOrdenamiento">
+    tools:context="com.example.android.sortingalgorithms.activities.utility.AlgoritmosDeOrdenamiento">
 
     <ImageView
         android:layout_width="match_parent"
