--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:alpha="0"
         android:src="@drawable/bubble_background"/>
 
@@ -41,7 +41,7 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -59,11 +59,38 @@
                         android:id="@+id/tvIteration"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvAlgorithmName"
                         android:text="number of iterations: "
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/textIteraciones"/>
 
-                </LinearLayout>
+                    <Button
+                    android:id="@+id/btnSave"
+                    android:background="@drawable/custom_button_pressed2"
+                    android:textColor="@android:color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvIteration"
+                    android:layout_marginTop="10dp"
+                    android:text="save game"
+                    android:onClick="saveGame"
+                    android:textSize="@dimen/textoBotonsitos"/>
+
+                    <Button
+                    android:id="@+id/btnLoad"
+                    android:background="@drawable/custom_button_pressed2"
+                    android:textColor="@android:color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvIteration"
+                    android:layout_toRightOf="@+id/btnSave"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="Load game"
+                    android:onClick="getSaved"
+                    android:textSize="@dimen/textoBotonsitos"/>
+
+                </RelativeLayout>
 
 
                 <LinearLayout
@@ -339,20 +366,18 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="20dp">
         <Button
             android:id="@+id/startButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="start"
             android:padding="@dimen/LayoutWidth"
             android:text="Start!"
-            android:layout_weight="1"
             android:background="@drawable/custom_button_pressed"
             android:textSize="@dimen/keysize"
             android:visibility="visible"
@@ -361,21 +386,54 @@
             android:textColor="@android:color/white" />
 
         <Button
-            android:id="@+id/btnInstruction"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="1"
-            android:background="@drawable/custom_button_pressed"
-            android:onClick="guide"
-            android:padding="@dimen/LayoutWidth"
-            android:text=" Guide "
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/keysize"
-            android:textStyle="bold"
-            android:visibility="visible" />
+        android:id="@+id/btnInstruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/custom_button_pressed"
+        android:onClick="guide"
+        android:padding="@dimen/LayoutWidth"
+        android:text=" Guide "
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/startButton"
+        android:textSize="@dimen/keysize"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
-    </LinearLayout>
+        <Button
+        android:id="@+id/btnSavedGames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/custom_button_pressed"
+        android:onClick="getSaved"
+        android:padding="@dimen/LayoutWidth"
+        android:layout_marginLeft="16dp"
+        android:text=" Saved games"
+        android:textColor="@android:color/white"
+        android:layout_toRightOf="@+id/startButton"
+        android:textSize="@dimen/keysize"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+        <Button
+        android:id="@+id/btnDeleteGames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/custom_button_pressed"
+        android:onClick="deleteAll"
+        android:padding="@dimen/LayoutWidth"
+        android:layout_marginLeft="16dp"
+        android:text=" Delete Games"
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/btnSavedGames"
+        android:layout_toRightOf="@+id/btnInstruction"
+        android:textSize="@dimen/keysize"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -396,7 +454,7 @@
                 android:layout_height="wrap_content"
                 android:text="Your result"
                 android:alpha="0"
-                android:visibility="invisible"
+                android:visibility="visible"
                 android:layout_marginBottom="10dp"
                 android:textStyle="bold"
                 android:textSize="@dimen/textIteraciones"
@@ -409,7 +467,7 @@
                 android:text="Your result"
                 android:alpha="0"
                 android:layout_above="@id/tvYourResult"
-                android:visibility="invisible"
+                android:visibility="visible"
                 android:textStyle="bold"
                 android:textSize="@dimen/textIteraciones"
                 android:textColor="@android:color/white"/>
@@ -424,10 +482,10 @@
             android:layout_weight="1"
             android:alpha="0"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/claps"/>
+            android:src="@drawable/claps"
+            android:layout_alignParentRight="true" />
 
     </LinearLayout>
 
