--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,6 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="16dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <RelativeLayout
@@ -55,6 +54,17 @@
                         android:textColor="@android:color/white"
                         android:textStyle="bold"
                         android:textSize="@dimen/textoTitulo"/>
+                    <TextView
+                        android:id="@+id/tvPuntaje"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        android:paddingTop="3.5dp"
+                        android:text="Puntaje: 0"
+                        android:layout_toRightOf="@+id/tvAlgorithmName"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold"
+                        android:textSize="20sp"/>
                     <TextView
                         android:id="@+id/tvIteration"
                         android:layout_width="wrap_content"
@@ -90,13 +100,26 @@
                     android:onClick="getSaved"
                     android:textSize="@dimen/textoBotonsitos"/>
 
+                    <TextView
+                        android:id="@+id/tvTiempo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="12dp"
+                        android:layout_below="@+id/tvIteration"
+                        android:text="Tiempo: 100"
+                        android:layout_toRightOf="@+id/btnLoad"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold"
+                        android:textSize="20sp"/>
+
                 </RelativeLayout>
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:orientation="vertical">
                     <Button
                         android:id="@+id/btnSee"
