--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -34,8 +34,27 @@
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tvPuntaMejor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:textSize="30sp"
+                    android:text="Mejor puntaje: "/>
+
+                <TextView
+                    android:id="@+id/tvPuntajeMejor"
+                    android:layout_toRightOf="@id/tvPuntaMejor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:textSize="30sp"
+                    android:text="0"/>
+
                 <TextView
                     android:id="@+id/tvPunta"
+                    android:layout_below="@+id/tvPuntajeMejor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -45,6 +64,7 @@
                 <TextView
                     android:id="@+id/tvPuntaje"
                     android:layout_toRightOf="@id/tvPunta"
+                    android:layout_below="@+id/tvPuntajeMejor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
